--- a/AspNetCore.Log.Practice/AspNetCore.Log.Practice.csproj
+++ b/AspNetCore.Log.Practice/AspNetCore.Log.Practice.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Rick.Docs.Samples.RouteInfo" Version="1.0.0.4" />
+  </ItemGroup>
+
 
 </Project>
