--- a/AspNetCore.Log.Practice/appsettings.Development.json
+++ b/AspNetCore.Log.Practice/appsettings.Development.json
@@ -2,15 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    },
-    //Logging.{providername}.LogLevel 重写Logging.LogLevel 中设置的所有内容
-    "Console": {
-      "LogLevel": {
-        "Default": "Trace"
-        //"Microsoft.Hosting": "Debug" // Debug:Microsoft.Hosting category.
-      }
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Trace"
     }
+    //,
+    ////Logging.{providername}.LogLevel 重写Logging.LogLevel 中设置的所有内容
+    //"Console": {
+    //  "LogLevel": {
+    //    "Default": "Trace"
+    //    //"Microsoft.Hosting": "Debug" // Debug:Microsoft.Hosting category.
+    //  }
+    //}
   }
 }
