--- a/AspNetCore.Options/AspNetCore.Options.Practice/appsettings.Development.json
+++ b/AspNetCore.Options/AspNetCore.Options.Practice/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Position": {
+      "Title": "1111111",
+      "Name": "Joe Smith"
   }
 }
