--- a/AspNetCore.Options/AspNetCore.Options.Practice/appsettings.json
+++ b/AspNetCore.Options/AspNetCore.Options.Practice/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Position": {
+    "Title": "123455",
+    "Name": "Joe Smith"
+  },
+  "MyConfig": {
+    "Key1": "My Key One",
+    "Key2": 10,
+    "Key3": 32
+  }
 }
