--- a/AspNetCore.StaticFileMiddle/AspNetCore.StaticFileMiddle.Pratice/AspNetCore.StaticFileMiddle.Pratice.csproj
+++ b/AspNetCore.StaticFileMiddle/AspNetCore.StaticFileMiddle.Pratice/AspNetCore.StaticFileMiddle.Pratice.csproj
@@ -2,11 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="StaticFile\file.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
