添加Option 选项项目

--- a/AspNetCore.Options/AspNetCore.Options.Practice/appsettings.Development.json
+++ b/AspNetCore.Options/AspNetCore.Options.Practice/appsettings.Development.json
@@ -7,7 +7,17 @@
     }
   },
   "Position": {
-      "Title": "1111111",
-      "Name": "Joe Smith"
-  }
+    "Title": "1111111",
+    "Name": "Joe Smith"
+  },
+  "TopItem": {
+      "Month": {
+        "Name": "Green Widget",
+        "Model": "GW46"
+      },
+      "Year": {
+        "Name": "Orange Gadget",
+        "Model": "OG35"
+      }
+    }
 }
