拆分Option 项目, 并添加Validation 项目

--- a/AspNetCore.Options/AspNetCore.Options.Bind.Practice/appsettings.json
+++ b/AspNetCore.Options/AspNetCore.Options.Bind.Practice/appsettings.json
@@ -21,7 +21,9 @@
       "Model": "OG35"
     }
   },
-  "OrderServiceOptions": {
-    "MaxOrderCount": 500
+  "MyConfig": {
+    "Key1": "My Key One",
+    "Key2": 10,
+    "Key3": 32
   }
 }
