--- a/AspNetCore.JWT/appsettings.json
+++ b/AspNetCore.JWT/appsettings.json
@@ -9,7 +9,7 @@
   "Jwt": {
     "SecretKey": "qwedfgvhnjkilaxc",
     "Issuer": "https://localhost:5000/",
-    "Audience": "https://localhost:5000/"
+    "Audience": "everyone"
   },
   "AllowedHosts": "*"
 }
