--- a/Fundamentals/03-AspNetCore.Middleware/AspNetCore.Middleware/Properties/launchSettings.json
+++ b/Fundamentals/03-AspNetCore.Middleware/AspNetCore.Middleware/Properties/launchSettings.json
@@ -1,11 +1,11 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:28900",
-      "sslPort": 44342
+      "applicationUrl": "http://localhost:60927/",
+      "sslPort": 44302
     }
   },
   "profiles": {
@@ -19,13 +19,13 @@
     },
     "AspNetCore.Middleware": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "dotnetRunMessages": "true"
     }
   }
 }
