--- a/Fundamentals/12-AspNetCore.MakeHttpRequest/AspNetCore6.MakeHttpRequest/AspNetCore6.MakeHttpRequest.csproj
+++ b/Fundamentals/12-AspNetCore.MakeHttpRequest/AspNetCore6.MakeHttpRequest/AspNetCore6.MakeHttpRequest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.5" />
     <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
   </ItemGroup>
 
