--- a/SecurityIdentity/AspNetCore.Authentication/AspNetCore.Identity/appsettings.json
+++ b/SecurityIdentity/AspNetCore.Authentication/AspNetCore.Identity/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-identity-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
