--- a/SecurityIdentity/AspNetCore.Authentication/AspNetCore.Identity/appsettings.json
+++ b/SecurityIdentity/AspNetCore.Authentication/AspNetCore.Identity/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "Server": "127.0.0.1",
+    "Port": 25,
+    "SenderName": "Anton",
+    "SenderEmail": "Testo@testo.com"
+  }
 }
