--- a/SecurityIdentity/AspNetCore.Authentication/AspNetCore.IdentityJWT.API/appsettings.json
+++ b/SecurityIdentity/AspNetCore.Authentication/AspNetCore.IdentityJWT.API/appsettings.json
@@ -7,12 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\mssqllocaldb;Database=AuthDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthSettings": {
     "SecretKey": "This is the key that we will use in the encryption",
     "Audience": "everyone",
     "Issuer": "https://localhost:7297"
   },
-  "DomainUrl": "https://localhost:7297"
+  "DomainUrl": "https://localhost:7297",
+  "SendGridAPIKey": "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"
 }
