ASP.NET Core Identity系列之九 2FA

--- a/AspNetCore.Identity/Identity/appsettings.json
+++ b/AspNetCore.Identity/Identity/appsettings.json
@@ -8,5 +8,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EmailSetting": {
+    "EmailFrom": "bingbing_gui@outlook.com",
+    "SmtpHost": "smtp.office365.com",
+    "SmtpPort": "587",
+    "SmtpUser": "bingbing_gui@outlook.com",
+    "SmtpPass": "********"
+  }
 }
