ASP.NET Core Identity系列之十注册用户邮件确认

--- a/AspNetCore.Identity/Identity/Identity.csproj
+++ b/AspNetCore.Identity/Identity/Identity.csproj
@@ -17,4 +17,14 @@
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DB\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DB\IdentityDB.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
