--- a/AspNetCore.Identity/Identity/appsettings.json
+++ b/AspNetCore.Identity/Identity/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityDB;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\\DB\\IdentityDB.mdf;"
   },
   "AllowedHosts": "*",
 
@@ -15,6 +15,6 @@
     "SmtpHost": "smtp.office365.com",
     "SmtpPort": "587",
     "SmtpUser": "bingbing_gui@outlook.com",
-    "SmtpPass": "********"
+    "SmtpPass": "1234qwer!@#$"
   }
 }
