ASP.NET Core Identity系列之十一密码重置

--- a/AspNetCore.Identity/Identity/appsettings.json
+++ b/AspNetCore.Identity/Identity/appsettings.json
@@ -15,6 +15,6 @@
     "SmtpHost": "smtp.office365.com",
     "SmtpPort": "587",
     "SmtpUser": "bingbing_gui@outlook.com",
-    "SmtpPass": "1234qwer!@#$"
+    "SmtpPass": "******"
   }
 }
