Entity Framework Core-Migrations

--- a/EntityFrameworkCore/EFCoreMigration/appsettings.json
+++ b/EntityFrameworkCore/EFCoreMigration/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EFCoreMigration;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
