--- a/Advanced/02-AspNetCore.RouteToCode/AspNetCore.URLRouting/AspNetCore.URLRouting.csproj
+++ b/Advanced/02-AspNetCore.RouteToCode/AspNetCore.URLRouting/AspNetCore.URLRouting.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
