--- a/EntityFrameworkCore/EFCoreFluentAPIOneToMany/EFCoreFluentAPIOneToMany/appsettings.json
+++ b/EntityFrameworkCore/EFCoreFluentAPIOneToMany/EFCoreFluentAPIOneToMany/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EFCoreFluentAPIOneToMany;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EFCoreFluentAPIOneToMany;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
