ASP.NET Core Configuration

--- a/Fundamentals/AspNetCore.Configuration/AspNetCore.Configuration/appsettings.json
+++ b/Fundamentals/AspNetCore.Configuration/AspNetCore.Configuration/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Middleware": {
+    "EnableContentMiddleware": true,
+    "EnableShortCircuitMiddleware": true,
+    "EnableRequestEditingMiddleware": true,
+    "EnableResponseEditingMiddleware": false
+  },
+  "APIEndpoints": {
+    "Name": "OpenWeatherMap",
+    "Url": "http://api.openweathermap.org/",
+    "IsSecured": true
+  }
 }
