ASP.NET Core Controllers

--- a/Fundamentals/AspNetCore.Configuration/AspNetCore.Configuration/Properties/launchSettings.json
+++ b/Fundamentals/AspNetCore.Configuration/AspNetCore.Configuration/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7034;http://localhost:5041"
