--- a/Fundamentals/AspNetCore.Configuration/AspNetCore.Configuration/appsettings.Development.json
+++ b/Fundamentals/AspNetCore.Configuration/AspNetCore.Configuration/appsettings.Development.json
@@ -1,11 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SQL6003.site4now.net;Database=DB_A3CE39_y11;User Id=DB_PCE39_y11_admin;Password=admin@123Ezfx;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+    "DefaultConnection": "Server=vaio;Database=Goldentaurus;Trusted_Connection=True;"
   }
 }
