ASP.NET Core Customer Tag Helper

--- a/Fundamentals/AspNetCore.TagHelpers/AspNetCore.CustomTagHelpers/AspNetCore.CustomTagHelpers.csproj
+++ b/Fundamentals/AspNetCore.TagHelpers/AspNetCore.CustomTagHelpers/AspNetCore.CustomTagHelpers.csproj
@@ -6,4 +6,23 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Home\Index.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="Views\Home\Privacy.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Home\Create.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Home\Create.cshtml" />
+  </ItemGroup>
+
 </Project>
