ASP.NET Core 全球化与本地化二

--- a/SecurityIdentity/AspNetCore.UserSecrets/AspNetCore.UserSecrets/AspNetCore.UserSecrets.csproj
+++ b/SecurityIdentity/AspNetCore.UserSecrets/AspNetCore.UserSecrets/AspNetCore.UserSecrets.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>0dfdeee5-e5e9-4eca-b7ec-b664ca31e582</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
 
 </Project>
