--- a/Fundamentals/AspNetCore.APIControllers/AspNetCore.APIController.ActionReturnTypes/AspNetCore.APIController.ActionReturnTypes.csproj
+++ b/Fundamentals/AspNetCore.APIControllers/AspNetCore.APIController.ActionReturnTypes/AspNetCore.APIController.ActionReturnTypes.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.15" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
