--- a/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/appsettings.json
+++ b/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/appsettings.json
@@ -9,5 +9,10 @@
   "Position": {
     "Title": "Editor",
     "Name": "Joe Smith"
+  },
+  "MyConfig": {
+    "Key1": "My Key One",
+    "Key2": 10111,
+    "Key3": 32
   }
 }
