--- a/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/appsettings.Development.json
+++ b/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Position": {
+    "Title": "Editor",
+    "Name": "Joe Smith"
   }
 }
