--- a/Fundamentals/AspNetCore.APIControllers/AspNetCore.FormatResponseOutputData/AspNetCore.FormatResponseOutputData.csproj
+++ b/Fundamentals/AspNetCore.APIControllers/AspNetCore.FormatResponseOutputData/AspNetCore.FormatResponseOutputData.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
