--- a/Third-Party.Library/HtmlAgilityPack.Library/HtmlAgilityPack.Library.Console.csproj
+++ b/Third-Party.Library/HtmlAgilityPack.Library/HtmlAgilityPack.Library.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.34" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
   </ItemGroup>
 
 </Project>
