--- a/Third-Party.Library/QuestPDF.Library/QuestPDF.Library/QuestPDF.Library.csproj
+++ b/Third-Party.Library/QuestPDF.Library/QuestPDF.Library/QuestPDF.Library.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="QuestPDF" Version="2023.12.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
