--- a/src/Azure-AI/mslearn-openai/03-prompt-engineering/appsettings.json
+++ b/src/Azure-AI/mslearn-openai/03-prompt-engineering/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "AzureOAIEndpoint": "https://openai00001.openai.azure.com/",
-  "AzureOAIKey": "21ca16b59ce84d1289262fa27abdaff2",
+  "AzureOAIKey": "AZURE_OAI_KEY",
   "AzureOAIDeploymentName": "gpt-35-turbo"
 }
