--- a/src/Azure-AI/mslearn-openai/05-image-generation/appsettings.json
+++ b/src/Azure-AI/mslearn-openai/05-image-generation/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "AzureOAIEndpoint": "https://openai00001.openai.azure.com/",
-  "AzureOAIKey": "bf62f2857226400f9b73e2c8bcdbc17b",
+  "AzureOAIKey": "AZURE_OAI_KEY",
   "AzureOAIDeploymentName": "gpt-35-turbo"
 }
