--- a/src/Azure-AI/mslearn-openai/02-azure-openai-api/appsettings.json
+++ b/src/Azure-AI/mslearn-openai/02-azure-openai-api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "AzureOAIEndpoint": "YOU_AZURE_OAIENDPOINT",
-  "AzureOAIKey": "YOU_AZURE_OAI_KEY",
+  "AzureOAIEndpoint": "https://openai00001.openai.azure.com/",
+  "AzureOAIKey": "AZURE_OAI_KEY",
   "AzureOAIDeploymentName": "gpt-35-turbo"
 }
