--- a/src/Azure-AI/mslearn-openai/04-code-generation/appsettings.json
+++ b/src/Azure-AI/mslearn-openai/04-code-generation/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "AzureOAIEndpoint": "https://openai00001.openai.azure.com/",
-  "AzureOAIKey": "AzureOAIKey",
+  "AzureOAIKey": "AZURE_OAI_KEY",
   "AzureOAIDeploymentName": "gpt-35-turbo"
 }
