--- a/src/Azure-AI/mslearn-ai-language/01-analyze-text/appsettings.json
+++ b/src/Azure-AI/mslearn-ai-language/01-analyze-text/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "AIServicesEndpoint": "AI_SERVICE_ENDPOINT",
-  "AIServicesKey": "AI_SERVICE_KEY"
+  "AIServicesEndpoint": "",
+  "AIServicesKey": ""
 }
