--- a/src/09-AI-Agent/Azure-AI-Foudary-SDK/ChatApp/appsettings.json
+++ b/src/09-AI-Agent/Azure-AI-Foudary-SDK/ChatApp/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "PROJECT_CONNECTION": "",
-  "MODEL_DEPLOYMENT": "gpt-4",
+  "MODEL_DEPLOYMENT": "gpt-4.1",
+  "AZURE_CLIENT_ID": "58eebced-a1ed-4ba4-aa9a-11a896a068a7",
+  "AZURE_TENANT_ID": "",
+  "AZURE_CLIENT_SECRET": "",
   "AllowedHosts": "*"
 }
