--- a/src/09-AI-Agent/Azure-AI-Foudary-SDK/ChatApp/appsettings.json
+++ b/src/09-AI-Agent/Azure-AI-Foudary-SDK/ChatApp/appsettings.json
@@ -5,10 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "PROJECT_CONNECTION": "",
-  "MODEL_DEPLOYMENT": "gpt-4.1",
+  "PROJECT_CONNECTION": "eastus2.api.azureml.ms;319c5890-2b57-4922-8b6f-d4fe89fcc7e1;rg-billgui-9825_ai;ai-project",
+  "MODEL_DEPLOYMENT": "gpt-4",
   "AZURE_CLIENT_ID": "58eebced-a1ed-4ba4-aa9a-11a896a068a7",
-  "AZURE_TENANT_ID": "",
-  "AZURE_CLIENT_SECRET": "",
+  "AZURE_TENANT_ID": "dff3af67-091c-482e-8535-d6ead161d11e",
+  "AZURE_CLIENT_SECRET": "4Ct8Q~hgEI30PWjQlw5aseLFrgJuib3ZFuBovaTt",
   "AllowedHosts": "*"
 }
