--- a/src/09-AI-Agent/SemanticKernel/SK.FunctionCalling/appsettings.json
+++ b/src/09-AI-Agent/SemanticKernel/SK.FunctionCalling/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.SemanticKernel": "Trace", 
+      "Microsoft.SemanticKernel.Connectors.AI.OpenAI": "Trace" 
     }
   },
   "AllowedHosts": "*"
